css/groove_writer.css
/* ... */
	.metronomeButton:active {
		color: #EEF;
	}
	.metronomeButton.buttonSelected, .metronomeButton.buttonSelected:hover {  /* is a button and is selected */
		color: #FFF;
		background: #68c2ff;
		cursor: auto;
	}
	.rightButtons  {
	    display: inline-block;
		cursor: pointer;
		height: 20px;
		font-weight: 500;
		margin: 13px 3px 3px 3px;
		padding: 2px 10px;
		border: 0px solid #00B;
		border-radius: 20px;
		color: #EEF;
	}
	.rightButtons.buttonSelected {
		background: #68c2ff;
		color: #FFF;
	}
	#timeLabel, .subdivision, #advancedEditAnchor {
		display: block;
		cursor: pointer;
		font-size: 12px;
		font-weight: bold;
		height: 48px;
		border-bottom: 1px solid #000;
		text-align: center;
		vertical-align: middle;
		color: #89bee5;
		display: -webkit-flex;
		display: flex;
		align-items: center;
		-webkit-align-items: center;
		justify-content: center;
		-webkit-justify-content: space-around;
	}
	.subdivision.buttonSelected, .subdivision.buttonSelected:hover {  /* is subdivision and is selected */
		background: #53758e;
		color: #FFF;
		cursor: auto;
	}
	.buttonFraction {  /* The number above "triplet" in the .subdivision 1/4, 1/8, etc */
		display: block;
		font-size: 18px;
	}
	#timeLabel {
		cursor: auto;
		font-size: 16px;
		font-weight: 700;
		height: 48px;  /* Override from above */
	}
	#advancedEditAnchor.buttonSelected {
		background: #009ffa;
		color: #FFF;
		font-size: 14px;
	}
	.buttonText {
	}
	
	#NotationLine {
		max-width: 954px;
		height: 35px;
		text-align: center;
		padding-top: 13px;
		border-bottom:1px solid #AAA;
	}
	#NotationLabel {
		display: inline-block;
		margin:auto;
		font-size: 20px;
		font-weight: bold;
		text-align: center;
		padding-left: 54px;
	}
	#KeyButton {
		float: right;
		padding-right: 5px;
		font-size: 18px;
		text-align: right;
	}
	#hiddenDescription {
		display: none;
	}
	#musicalInput {
		display: block;
		width: 100%;
		max-width: 954px;
		background: #FFF;
		overflow-x: auto;
		overflow-y: hidden;
		border-bottom: 1px solid #AAA;
		white-space: nowrap;
	}
	@media only screen and (orientation: portrait) {
		#musicalInput {
			white-space: normal;
			/* wrap down on portait mode displays,
			 *	don't wrap in landscape mode
			 */
		}
	}
	#musicalInput.expanded {
		max-width: 5000px;
	}
	#measureContainer {
	}
	.staff-container {
		/margin-left: 2px;
		/margin-top: 2px;
		margin-right: -3px;
		margin-bottom: 0px;
		display: inline-block;
		background: #FFFFFF;
		white-space: nowrap;
	}
	.heading1 {
		font-size: 30px;
		font-weight: bold;
	}
	.line-labels {
		display: inline-block;
		vertical-align: top;
		width: 80px;
		font-size: 20px;
		display: table-cell;
	}
	.stickings-label {
		display: none;
		height: 23px;
		background: #f7f1cf;
		color: #2484C0;
		padding-top: 9px;
		padding-left: 1px;
		font-size: 12px;
		cursor: pointer;
		text-align: center;
	}
	.hh-label {
		display: block;
		white-space:nowrap;
		margin-top: 20px;
		margin-left: 8px;
		cursor: pointer;
		text-align: center;
	}
	.snare-label {
		margin-top: 35px;
		margin-left: 8px;
		cursor: pointer;
		text-align: center;
	}
	.kick-label {
		margin-top: 35px;
		margin-left: 8px;
		cursor: pointer;
		text-align: center;
	}
	.music-line-container {
		display: inline-block; 
		/top: 30px; 
		z-index: 3;
		display: table-cell;
	}
	.notes-container {
		font-family:  Times New Roman;  /* parens around snare ghost note, R for Ride */
		position: relative; 
		z-index: 4;
	}
	.stickings-container {
		display: none;
		height: 32px;
		background: #f7f1cf;
		margin-top: 0px;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.hi-hat-container {
		height: 47px;
		white-space:nowrap;
		border: 1px solid transparent;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.snare-container {
		border: 1px solid transparent;
		height: 58px;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.kick-container {
		border: 1px solid transparent;
		height: 84px;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.staff-line-1{
		position: absolute; top: 46px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.staff-line-2{
		position: absolute; top: 76px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.staff-line-3{
		position: absolute; top: 107px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.staff-line-4{
		position: absolute; top: 136px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.staff-line-5{
		position: absolute; top: 167px;
		width:100%; 
		height:0px; 
		border-top:3px solid #cacaca; 
	}
	.sticking {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 29px;
		height: 100%;
		margin-right: 2px;
		margin-left: 2px;
		}
	.hi-hat {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 29px;
		height: 100%;
		margin-right: 2px;
		margin-left: 2px;
	}
	.snare {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 29px;
		height: 100%;
		margin-right: 2px;
		margin-left: 2px;
	}
	.kick {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 29px;
		height: 100%;
		margin-right: 2px;
		margin-left: 2px;
	}
	.sticking_right {
		position: absolute; top: 0px; left: 6px;
		font-size: 24px;
		color: #CCCCCC;
		cursor: pointer;
	}
	.sticking_left {
		position: absolute; top: 0px; left: 6px;
		font-size: 24px;
		color: #CCCCCC;
		cursor: pointer;
	}
	.hh_crash {
		position: absolute; top: 21px; left: 2px;
		font-size: 22px;
		color: transparent;
		cursor: pointer;
	}
	.hh_ride {
		position: absolute; top: 17px; left: 5px;
		font-size: 26px;
		color: transparent;
		cursor: pointer;
	}
/* ... */

